src/objects/CAP_Settings_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores country specific annual cap.
Created by John A Adams 10/24/2013</description>
    <fields>
        <fullName>Annual_Amount_MERC__c</fullName>
        <description>Annual CAP value per country
Created by John A Adams 10/24/2013</description>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code_MERC__c</fullName>
        <description>Stores the country name that CAP applies to.
Created by John A Adams 10/24/2013</description>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code_MERC__c</fullName>
        <description>Maps the CAP Currency Code to the Country for calculations.  Created by Oliver Dunford 28th Oct 2013.</description>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_MERC__c</fullName>
        <description>Stores the year that the CAP value is applied.  Used text field as Data requires entry of day and month, and Number inserts a comma in value
Created by John A Adams 10/24/2013</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CAP by Country</label>
</CustomObject>